--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "crypto-js": "^4.2.0",
-    "echarts": "^5.5.0"
+    "echarts": "^5.5.0",
+    "express": "^4.18.3"
   }
 }
