--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "crypto-js": "^4.2.0",
     "echarts": "^5.5.0",
-    "express": "^4.18.3"
+    "express": "^4.18.3",
+    "node-fetch": "^3.3.2"
   }
 }
